# CodeClarity

./: .dockerignore  .gitignore  MANIFEST.in  README.md  requirements-dev.txt  setup.cfg  setup.py
.github/workflows/: test.yml
CodeClarity/docker_api/: setup.sh 
CodeClarity/docker_api /app/: nginx.conf  predictor.py  wsgi.py
CodeClarity/src/: base.py  codebert.py  config.yaml  unixcoder.py
CodeClarity/src/bi-encoders/: base.py  codebert.py  codet5.py  config.yaml  encoder.py  incoder.py  unixcoder.py
CodeClarity/src/utils/: processing.py
codeclarity/: __init__.py
codeclarity/bi_encoders/: __init__.py  encoder.py  response_model.py  x.py
codeclarity/bi_encoders/models/: base.py  codebert.py  codet5.py  incoder.py  unixcoder.py
codeclarity/bi_encoders/utils/: processing.py  response_model.py
codeclarity/utils/: processing.py
docker_api/: Dockerfile  requirements.txt  setup.sh
docker_api/app/: predictor.py  schema.py  serve  wsgi.py
docker_api/app/serving/models/: base.py  (+2 more)
examples/aws_python_sdk_codesearch/: code_search.ipynb  requirements.txt
examples/aws_python_sdk_codesearch/.ipynb_checkpoints/: requirements.txt
examples/docker_api/: Dockerfile  setup.sh
examples/docker_api/app/: predictor.py  schema.py  serve
tests/codeclarity/unit/: manual_test.py  test_codebert.py  test_incoder.py  test_unixcoder.py
tests/docker/unit/: api_test.py
tests/integration/: test_splitting.py
tests/unit/: test_codebert.py  test_incoder.py  test_unixcoder.py
tests/unit/code_splitting/: test_go.py  test_javascript.py  test_python.py  test_typescript.py
(+7 files in other folders)
