[metadata]
name = codeclarity
author = Documatic
description = An embedding tool for all state of the art code language models
long_description = file: README.md
long_description_content_type = text/markdown
keywords = sentence, embedding, code, search, contrastive, nlp, deep_learning, semantic
license = Apache 2.0 License

[options]
packages = find:
install_requires =
    transformers
    accelerate
    tqdm
    numpy
    pandas
python_version == 3.7

[flake8]
max-line-length = 88
extend-ignore = E203
per-file-ignores =
    **/__init__.py: F401
